<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vm" type="ywxt.myswjtu.ui.login.LoginViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"

            tools:context=".ui.login.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>

        <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/username_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        bind:errorMessage="@{vm.usernameErrorMessage}">

                    <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@={vm.username}"
                            android:maxLength="10"

                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password_login_form"
                        bind:errorMessage="@{vm.passwordErrorMessage}"
                >

                    <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@={vm.password}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:id="@+id/verify_login_form">
                    <EditText
                            android:id="@+id/verify_code"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_verify"
                            android:maxLength="4"
                            android:singleLine="true"
                            android:text="@={vm.verifyCode}">

                    </EditText>
                    <ImageView
                            android:clickable="true"
                            android:focusable="true"
                            android:id="@+id/verify_image"
                            android:layout_width="128dp"
                            android:layout_height="28dp"
                            android:contentDescription="@string/prompt_verify"
                            bind:image="@{vm.verifyImage}"
                            android:onClick="@{()->vm.getVerifyImages()}">

                    </ImageView>
                </LinearLayout>


                <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:onClick="@{() -> vm.login()}"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>